updated device breakpoints and fix main text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,114 +1,127 @@
 body {
-    font-family: 'Nunito', sans-serif;
-    color: white;
-}
-
-#container {
-    background-color: black;
+  font-family: "Nunito", sans-serif;
+  color: white;
+  background-color: black;
 }
 
 .nav-link {
-    color: white !important;
+  color: white !important;
 }
 
 #details {
+  object-fit: contain;
+  height: 746px;
+}
+
+.letter-spacing-2 {
+  letter-spacing: 2px;
+}
+
+.letter-spacing-1 {
+  letter-spacing: 1px;
+}
+
+#social-links {
+  top: 70px;
+  right: 10px;
+  width: 40px;
+}
+
+@media only screen and (max-width: 575px) {
+  #header {
+    height: 190px;
+  }
+
+  h1 {
+    font-size: 38px !important;
+    white-space: nowrap;
+  }
+
+  h4 {
+    font-size: 16px;
+  }
+
+  #header {
+    top: 140px;
+    left: 0;
+  }
+
+  #social-links {
+    width: 200px;
+    top: 450px;
+    right: 213px;
+  }
+
+  #shop {
+    margin-left: 120px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  #details {
     background-image: url("../4771648.jpg");
     background-position: center;
     background-size: auto;
     background-repeat: no-repeat;
     height: 680px;
+  }
+
+  #social-links {
+    top: 450px;
+    right: 200px;
+  }
 }
 
-#header {
-    top: 190px;
-    left: 25px;
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  h1 {
+    font-size: 80px;
+  }
+
+  h4 {
+    font-size: 25px;
+  }
+
+  #header {
+    top: 110px;
+  }
+
+  #social-links ul {
+    width: 400px;
+  }
 }
 
-h1 {
-    font-size: 100px;
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  h1 {
+    font-size: 80px;
+  }
+
+  h4 {
+    font-size: 25px;
+  }
+
+  #header {
+    top: 110px;
+  }
+
+  #social-links ul {
+    width: 400px;
+  }
 }
 
-h4 {
-    font-size: 40px;
-}
+@media only screen and (min-width: 1200px) {
+  h1 {
+    font-size: 80px;
+  }
 
-.letter-spacing-2 {
-    letter-spacing: 2px;
-}
+  h4 {
+    font-size: 25px;
+  }
 
-.letter-spacing-1 {
-    letter-spacing: 1px;
-}
+  #header {
+    top: 110px;
+  }
 
-#social-links {
-    top: 70px;
-    right: 10px;
-    width: 40px;
-}
-
-@media only screen and (max-width: 992px){
-    h1 {
-        font-size: 80px;
-    }
-
-    h4 {
-        font-size: 25px;
-    }
-
-    #header {
-        top: 110px;
-    }
-
-    #social-links ul {
-        width: 400px;
-    }
-}
-
-@media only screen and (max-width: 768px){
-    #details {
-        background-image: url("../4771648.jpg");
-        background-position: center;
-        background-size: auto;
-        background-repeat: no-repeat;
-        height: 680px;
-    }
-
-    #social-links {
-        top: 450px;
-        right: 200px;
-    }
-}
-
-@media only screen and (max-width: 576px){
-    h1 {
-        font-size: 52px;
-    }
-
-    h4 {
-        font-size: 25px;
-        text-align: center;
-    }
-
-    #header {
-        top: 60px;
-        left: 10px;
-    }
-
-    #details {
-        background-image: url("../4771648.jpg");
-        background-position: center;
-        background-size: auto;
-        background-repeat: no-repeat;
-        height: 680px;
-    }
-
-    #social-links {
-        width: 200px;
-        top: 450px;
-        right: 213px;
-    }
-
-    #shop {
-        margin-left: 120px;
-    }
+  #social-links ul {
+    width: 400px;
+  }
 }
